<resources>
    <string name="app_name">Private Shopping List</string>
    <string name="shopping_list">Shopping List</string>
    <string name="categories">Categories</string>
    <string name="about">About</string>
    <string name="urgent">Urgent</string>
    <string name="to_buy">To buy</string>
    <string name="delete">Delete</string>
    <string name="create_new_cat">Create a new category</string>
    <string name="create_new_prod">Create a new product</string>
    <string name="write_cat_name">Write a category name</string>
    <string name="cat_suggestion">Maybe a shop or kind of product...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="expand">Expand</string>
    <string name="you_can_put_comments">You can punt some comments here (i.e. quantity)...</string>
    <string name="add_category">Add new category</string>
    <string name="product_name">Product name...</string>
    <string name="add_cat_to_product_detail">Pick categories to add. You can create new categories at the categories list.</string>
    <string name="add_cat_to_product">Add categories to %s.</string>
    <string name="add_cat_to_filter">Add categories to filter.</string>
    <string name="add_cat_to_filter_detail">Pick categories to filter the shopping list. You can add new categories at categories list.</string>
    <string name="product_exist">This product name already exists.</string>
    <string name="unknown_problem">Unknown problem.</string>
    <string name="category_exist">This category name already exists.</string>
    <string name="about_app">The app is free, under Apache License 2.0.</string>
    <string name="see_license">You can see Apache License 2.0 here:</string>
    <string name="code_link">https://github.com/xsalagarcia/MyPrivateShoppingList</string>
    <string name="license_link">https://www.apache.org/licenses/LICENSE-2.0.txt</string>
    <string name="see_about_app">About the app...</string>
    <string name="deleted">"Deleted "</string>
    <string name="undo">Undo</string>
</resources>