<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/verticalLayoutDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/productET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/product_name" />

        <EditText
            android:id="@+id/commentsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/you_can_put_comments" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/filterButtonsTBG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:singleSelection="false"
            android:layout_marginRight="10dp"
            app:buttonUrgent="@{isUrgentBtn}"
            app:buttonToBuy="@{hasToBuyBtn}"
            >

            <Button
                android:id="@+id/isUrgentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/urgent"
                android:layout_weight="1"
                app:icon="@drawable/ic_outline_shopping_urgent_24"
                style="@style/ToggleButtonWithIconOnly"
                />

            <Button
                android:id="@+id/hasToBuyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/to_buy"
                android:layout_weight="1"
                app:icon="@drawable/ic_outline_shopping_cart_24"
                style="@style/ToggleButtonWithIconOnly"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categoriesCG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </HorizontalScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>